--- a/app/views/noodall/admin/redirects/edit.html.erb
+++ b/app/views/noodall/admin/redirects/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Redirect</h1>
 
-<%= form_for @redirect, :url => admin_redirect_path(@redirect), :html => {:id => 'node-form'} do |f| %>
+<%= form_for @redirect, :url => noodall_admin_redirect_path(@redirect), :html => {:id => 'node-form'} do |f| %>
 
   <%= f.error_messages %>
 
