--- a/app/views/noodall/admin/redirects/new.html.erb
+++ b/app/views/noodall/admin/redirects/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Redirect</h1>
 
-<%= form_for @redirect, :url => admin_redirects_path, :html => {:id => 'node-form'} do |f| %>
+<%= form_for @redirect, :url => noodall_admin_redirects_path, :html => {:id => 'node-form'} do |f| %>
 
   <%= f.error_messages %>
 
